Fix download button gap.

--- a/src/content_script/main.sass
+++ b/src/content_script/main.sass
@@ -61,7 +61,7 @@ $harvest-yellow: rgb(241, 185, 26)
   -webkit-box-direction: normal
   -webkit-box-orient: horizontal
   flex-direction: row
-  margin-left: 12px
+  margin-left: 3em
   &.status
     min-height: 1.875rem
     // padding-left: 0.85rem
@@ -72,7 +72,7 @@ $harvest-yellow: rgb(241, 185, 26)
     -webkit-box-flex: 1
     flex-grow: 0
     flex-basis: auto
-    // margin-left: 4em
+    margin-left: 12px
   &.photo
     // justify-content: flex-end
     // flex-grow: 0.4
